themes/barba/layout/components/features/_feature-nav.scss
.feature__nav {
  position: fixed;
  z-index: 10;
  top: 50%;
  left: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100vw;
  margin: 0;
  padding: 0 1rem;
  list-style: none;
  transform: translateY(-50%);
  pointer-events: none;

  @include mq(m) {
    padding: 0 5rem;
  }

  li {
    pointer-events: all;
  }

  a {
    position: relative;
    display: flex;
    align-items: center;
    color: $c-gray-darker;
    font-family: $ff-alt;
    font-size: 1.1rem;
    text-transform: uppercase;
    letter-spacing: 0.212rem;

    @media (prefers-color-scheme: dark) {
      [data-feature-order='0'] & {
        color: $c-menu-feature-0;
      }

      [data-feature-order='1'] & {
        color: $c-menu-feature-1;
      }

      [data-feature-order='2'] & {
        color: $c-menu-feature-2;
      }

      [data-feature-order='3'] & {
        color: $c-menu-feature-3;
      }

      [data-feature-order='4'] & {
        color: $c-menu-feature-4;
      }
    }

    .icon--barba {
      width: 2.1rem;
      height: 1.5rem;
      fill: currentcolor;
      stroke: currentcolor;
    }

    span {
      position: absolute;
      top: 50%;
      white-space: nowrap;
      opacity: 0;
      pointer-events: none;
      transition: opacity 0.3s, transform 0.3s ease-out;
    }
  }
}

.feature__nav__el {
  @include mq(m) {
    a:hover {
      span {
        opacity: 1;
        pointer-events: initial;
        transform: translate3d(0, -50%, 0);
      }
    }
  }

  &:first-child a {
    .icon--barba {
      margin-right: 1rem;
    }

    span {
      left: 3.1rem;
      transform: translate(10%, -50%);
    }
  }

  &:last-child a {
    .icon--barba {
      margin-left: 1rem;
    }

    span {
      right: 3.1rem;
      transform: translate(-10%, -50%);
    }
  }
}

